--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,7 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      awesome
+font_family      FiraCode-Regular
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
